--- a/app/views/about/about.html
+++ b/app/views/about/about.html
@@ -92,7 +92,7 @@
 				</p>
 			</div>
 		</div>
-		<div class="row team-members">
+		<!--<div class="row team-members">
 			<div class="col-xs-4 col-sm-3 col-md-2 col-sm-offset-3 col-md-offset-4 team-image">
 				<img src="/images/blank_frame.jpg" alt="LePartycious-team"/>
 			</div>
@@ -109,6 +109,6 @@
 					She is our Product Designer and consistently works for giving our product a cool look. 
 				</p>
 			</div>
-		</div>
+		</div>-->
 	</section>
 </div>
