--- a/app/views/detail/reviews.html
+++ b/app/views/detail/reviews.html
@@ -14,7 +14,7 @@
 	</div>
 	<div flex="70" layout-padding>
 		<div layout="row" flex="100">
-			<div class="md-title" flex=>REVIEWS</div>
+			<div class="md-title" flex>REVIEWS</div>
 			<span flex></span>
 			<div flex class="text-right">
 				<a href="javascript:void(0)" ng-click="vm.closeAllReviews();">
