--- a/app/views/header/header.html
+++ b/app/views/header/header.html
@@ -19,7 +19,7 @@
 						</md-button>
 					</li>
 					<li class="hidden-xs">
-						<md-button style="color: white;">
+						<md-button style="color: white;" ng-click="vm.showSignUpPopup();">
 							SIGN UP
 						</md-button>
 					</li>
