--- a/app/views/login/signin.html
+++ b/app/views/login/signin.html
@@ -18,15 +18,34 @@
 								<hr>
 								<div class="text-center">OR</div>
       		<hr>
-        <form name="form.signinForm" class="col-sm-12" novalidate>
+        <form name="form.signinFormUser" class="col-sm-12" novalidate>
         	
-        <div class="form-group" style="margin-top:10px;"><label class="required">Email</label><input class="form-control required" placeholder="Your email address" type="email" ng-model="vm.signinForm.email" name="email" required ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
-          <span style="color:brown;" ng-show="(form.contactForm.name.$touched || vm.submitted) && form.contactForm.name.$invalid">Name is mandatory.</span>
+        <div class="form-group" style="margin-top:10px;"><label class="required">Email</label><input class="form-control required" placeholder="Your email address" type="email" ng-model="vm.signinUser.email" name="email" required ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
+          <span style="color:brown;" ng-show="(form.signinFormUser.email.$touched || vm.submitted) && form.signinFormUser.email.$invalid">Email is invalid.</span>
       	</div>
 
-          <div class="form-group"><label class="required">Password</label><input class="form-control required" placeholder="Your password" type="password" ng-model="vm.signin.password" name="password" required></input>
-          	<span style="color:brown;" ng-show="(form.contactForm.message.$touched || vm.submitted) && form.contactForm.message.$invalid">Message is mandatory.</span>
+          <div class="form-group"><label class="required">Password</label><input class="form-control required" placeholder="Your password" type="password" ng-model="vm.signinUser.password" name="password" required></input>
+          	<span style="color:brown;" ng-show="(form.signinFormUser.password.$touched || vm.submitted) && form.signinFormUser.password.$invalid">Password is invalid.</span>
           </div>
+		
+		<!--<md-input-container class="md-block">
+						
+						<label>Email</label>
+						<input ng-model="vm.signinForm.email" type="email" name="email" required ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
+						<div ng-messages="form.signinForm.email.$error">
+          <div ng-message="required">Email is required.</div>
+          <div ng-message="pattern">Please input a valid Email ID</div>
+          </div>
+					</md-input-container>
+					
+		<md-input-container class="md-block">
+						
+						<label>Password</label>
+						<input type="password" ng-model="vm.signin.password" name="password" required>
+						<div ng-messages="form.signinForm.password.$error">
+          <div ng-message="required">Password is required.</div>
+          </div>
+					</md-input-container>-->			
 		
 		<div class="text-right fogot-pwd">
 			<a href="javascript:void(0)" data-ng-click="vm.showfgtpwdPopup();">Forgot Password?</a>
@@ -53,14 +72,14 @@
 								<hr>
 								<div class="text-center">OR</div>
       		<hr>-->
-        <form name="form.signinForm" class="col-sm-12" novalidate>
+        <form name="form.signinFormVendor" class="col-sm-12" novalidate>
         	
-        <div class="form-group" style="margin-top:10px;"><label class="required">Email</label><input class="form-control required" placeholder="Your email address" type="email" ng-model="vm.signinForm.email" name="email" required ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
-          <span style="color:brown;" ng-show="(form.contactForm.name.$touched || vm.submitted) && form.contactForm.name.$invalid">Name is mandatory.</span>
+        <div class="form-group" style="margin-top:10px;"><label class="required">Email</label><input class="form-control required" placeholder="Your email address" type="email" ng-model="vm.signinVendor.email" name="email" required ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
+          <span style="color:brown;" ng-show="(form.signinFormVendor.email.$touched || vm.submitted) && form.signinFormVendor.email.$invalid">Email is invalid.</span>
       	</div>
 
-          <div class="form-group"><label class="required">Password</label><input class="form-control required" placeholder="Your password" type="password" ng-model="vm.signin.password" name="password" required></input>
-          	<span style="color:brown;" ng-show="(form.contactForm.message.$touched || vm.submitted) && form.contactForm.message.$invalid">Message is mandatory.</span>
+          <div class="form-group"><label class="required">Password</label><input class="form-control required" placeholder="Your password" type="password" ng-model="vm.signinVendor.password" name="password" required></input>
+          	<span style="color:brown;" ng-show="(form.signinFormVendor.password.$touched || vm.submitted) && form.signinFormVendor.password.$invalid">Password is invalid.</span>
           </div>
 		
 		<div class="text-right fogot-pwd">
