--- a/app/views/header/header.html
+++ b/app/views/header/header.html
@@ -30,6 +30,14 @@
           </md-button>
           <md-menu-content width="3" id="loggedInuser_md_menu_content">
             <md-menu-item>
+              <md-button ng-click="vm.showResetPwdPopup();">
+                  <div layout="row" flex>                
+                    <md-icon md-menu-align-target class="material-icons">settings_backup_restore</md-icon>
+                    <p flex>Reset Password</p>
+                  </div>
+              </md-button>
+            </md-menu-item>
+            <md-menu-item>
               <md-button ng-click="">
                   <div layout="row" flex>                
                     <md-icon md-menu-align-target class="material-icons">power_settings_new</md-icon>
