--- a/app/views/login/forgotpwd.html
+++ b/app/views/login/forgotpwd.html
@@ -12,12 +12,12 @@
         	
         	
         <div class="form-group" style="margin-top:10px;"><label class="required">Email</label><input class="form-control required" placeholder="Your email address" type="email" ng-model="vm.fgtpwdForm.email" name="email" required ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
-          <span style="color:brown;" ng-show="(form.contactForm.name.$touched || vm.submitted) && form.contactForm.name.$invalid">Name is mandatory.</span>
+          <span style="color:brown;" ng-show="(form.fgtpwdForm.email.$touched || vm.submitted) && form.fgtpwdForm.email.$invalid">Email is invalid.</span>
       	</div>
 
 		
 		<div>	
-          <a href="#" class="btn btn-login">SEND MY DETAILS</a>
+          <a href="#" class="btn btn-login" ng-click="vm.sendDetails();">SEND MY DETAILS</a>
 </div>
 		<div class="text-center mTop10">
       	I Remember now !! <a href="javascript:void(0)" class="log-in-link" data-ng-click="vm.showSignInPopup();">LOG IN</a>
