--- a/app/lp_wizard/views/venue_wizard/venue_wizard.html
+++ b/app/lp_wizard/views/venue_wizard/venue_wizard.html
@@ -68,23 +68,14 @@
         <input type="submit" wz-next value="Continue" />
     </wz-step>
     <wz-step wz-title="Event Area Details">
+     <md-content>
         <h1>Events Details</h1>
         
        <div layout="row" layout-margin>
         <div flex></div>
         <md-button class="md-primary md-raised" ng-click="vm.createEventArea();">Add EventArea</md-button>
         </div> 
-        <form name="eventAreaForm" ng-show="vm.showEventAreaForm">
-        	<fieldset ng-disabled="false">
-        		<div layout="row" layout-wrap layout-margin>
-        			
-      			</div>
-      			<div layout="row" layout-margin>
-        <div flex></div>
-        <md-button class="md-primary md-raised" ng-click="vm.createEventArea($event);">Add Event Area</md-button>
-        </div> 
-      			</fieldset>
-      			</form>
+      			
        <div layout="row" layout-margin layout-wrap md-whiteframe="4"> 
        	<!--<md-toolbar class="md-table-toolbar md-default" flex="100">
   <div class="md-toolbar-tools">
@@ -126,6 +117,55 @@
 </md-table-container>
 </div>
 
+<!-- Rooms Details Table -->
+
+<div layout="row" layout-margin>
+        <div flex></div>
+        <md-button class="md-primary md-raised" ng-click="vm.createRoom();">Add Rooms</md-button>
+        </div> 
+ 
+      			
+       <div layout="row" layout-margin layout-wrap md-whiteframe="4"> 
+       	<!--<md-toolbar class="md-table-toolbar md-default" flex="100">
+  <div class="md-toolbar-tools">
+    <span>Event Areas</span>
+  </div>
+</md-toolbar>-->
+
+<md-table-container flex="100">
+  <table md-table md-progress="promise">
+    <thead md-head md-order="" md-on-reorder="" class="lp-wizard-thead">
+      <tr md-row>
+        
+        <th md-column>Room Type</th>
+        <th md-column>Number Of Rooms</th>
+        <th md-column>Price Per Room</th>
+        <th md-column>Tax(%)</th>
+        <th md-column>Facilities</th>
+        <th md-column>Modify</th>
+        <th md-column>Delete</th>
+      </tr>
+    </thead>
+    <tbody md-body>
+      <tr md-row md-select="room" md-select-id="$index" md-auto-select ng-repeat="room in vm.rooms">
+        <td md-cell>{{room.type}}</td>
+        <td md-cell>{{room.noOfRooms}}</td>
+        <td md-cell>{{room.price}}</td>
+        <td md-cell>{{room.tax}}</td>
+        <td md-cell>{{room.facilities}}</td>
+        <td md-cell><md-button class="md-icon-button" ng-click="vm.modifyRoom($event,$index,room)"><md-icon class="material-icons">border_color</md-icon></md-button></td>
+        <td md-cell><md-button class="md-icon-button" ng-click="vm.deleteRoom($event,$index)"><md-icon class="material-icons">delete_forever</md-icon></md-button></td>
+      </tr>
+      <tr md-row  ng-if="vm.rooms.length === 0">
+      <td md-cell>No Rooms Added</td>
+      </tr>
+    </tbody>
+  </table>
+</md-table-container>
+</div>
+
+<!-- Rooms Details Table Ends -->
+
 <div layout="row" layout-margin layout-wrap layout-align="start center">
 	<div flex-xs="100" flex-gt-xs="100">
 		<h2 class="md-title">Select Services You Provide</h2>
@@ -133,13 +173,99 @@
     <md-chips ng-model="vm.selectedAreaServices" readonly="::vm.readonly" md-removable="::vm.removable"></md-chips>
 	</div>
 	<div flex-xs="100" flex-gt-xs="100">
-		<wan-select placeholder="" source-data="::vm.areaServices" selected-data="vm.selectedAreaServices" select-changed=""></wan-select>
+		<wan-select placeholder="" source-data="::vm.lookup.eventAreaServices" selected-data="vm.selectedAreaServices" select-changed=""></wan-select>
 	</div>	
 </div>
+
+<div layout="row" layout-margin>
+        <div flex></div>	
+        <md-button class="md-raised">Back</md-button>
+        <md-button class="md-primary md-raised" wz-next>Next</md-button>
+        </div>
 <!--<md-table-pagination md-limit="query.limit" md-limit-options="[5, 10, 15]" md-page="query.page" md-total="{{desserts.count}}" md-on-paginate="getDesserts" md-page-select></md-table-pagination>-->
+     <md-content>
     </wz-step>
-    <wz-step wz-title="More steps">
-        <p>Even more steps!!</p>
+    <wz-step wz-title="Catering & Decor Details">
+    <md-content>
+        <h1>Catering & Decor Details</h1>
+    	<form name="basicDetails">
+        	<fieldset ng-disabled="false">
+        		<div layout="row" layout-wrap layout-margin>
+        			<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
+        				<label>You Provide Catering Services?</label>
+        				<md-select ng-model="cateringDecorDetails.provideCateringServices" required>
+            			<md-option ng-repeat="option in ::vm.lookup.provideCateringServicesOptions" value="{{option}}">{{option}}</md-option>
+      				</md-select>
+      				<div class="md-errors-spacer"></div>
+      				</md-input-container>
+      				<span flex-gt-xs hide-xs></span>
+      				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
+        				<label>You Provide Decor Services?</label>
+        				<md-select ng-model="cateringDecorDetails.provideDecorServices" required>
+            			<md-option ng-repeat="option in ::vm.lookup.provideDecorServicesOptions" value="{{option}}">{{option}}</md-option>
+      				</md-select>
+      				<div class="md-errors-spacer"></div>
+      				</md-input-container>
+      				
+      				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
+        				<label>Per Plate(Veg)</label>
+        				 <md-select ng-model="cateringDecorDetails.vegPerPlateCost">
+            			<md-option ng-repeat="option in vm.lookup.perPlateCostOptions" value="{{option}}">{{option}}</md-option>
+      				</md-select>
+      				<div class="md-errors-spacer"></div>
+      				</md-input-container>
+      				<span flex-gt-xs hide-xs></span>
+      				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
+        				<label>Per Plate(Veg)</label>
+        				 <md-select ng-model="cateringDecorDetails.nonvegPerPlateCost">
+            			<md-option ng-repeat="option in vm.lookup.perPlateCostOptions" value="{{option}}">{{option}}</md-option>
+      				</md-select>
+      				<div class="md-errors-spacer"></div>
+      				</md-input-container>
+      				
+      				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
+        				<label>Bartending Starts from</label>
+        				<input ng-model="cateringDecorDetails.bartendingStartsFrom" type="text">
+      				</md-input-container>
+      				<span flex-gt-xs hide-xs></span>
+      				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
+        				<label>Inhouse DJ Starts from</label>
+        				<input ng-model="cateringDecorDetails.inhouseDjStartsFrom" type="text">
+      				</md-input-container>
+      				
+      				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
+        				<label>Inhouse Decor Starts from</label>
+        				<input ng-model="cateringDecorDetails.inhouseDecorStartsFrom" type="text">
+      				</md-input-container>
+      				<span flex-gt-xs hide-xs></span>
+      				<div flex-gt-xs="45" hide-xs></div>
+      				
+      				<div layout="row" layout-margin layout-wrap layout-align="start center" flex-gt-xs="45" flex-xs="100">
+						<div flex-xs="100" flex-gt-xs="100">
+							<h2 class="md-title">Cuisines</h2>
+
+    						<md-chips ng-model="vm.selectedCuisines" readonly="::vm.readonly" md-removable="::vm.removable"></md-chips>
+						</div>
+						<div flex-xs="100" flex-gt-xs="100">
+							<wan-select placeholder="" source-data="::vm.lookup.cuisines" selected-data="vm.selectedCuisines" select-changed=""></wan-select>
+						</div>	
+					</div>
+					<span flex-gt-xs hide-xs></span>
+					<div layout="row" layout-margin layout-wrap layout-align="start center" flex-gt-xs="45" flex-xs="100">
+						<div flex-xs="100" flex-gt-xs="100">
+							<h2 class="md-title">Basic Catering Services</h2>
+
+    						<md-chips ng-model="vm.selectedBasicCateringServices" readonly="::vm.readonly" md-removable="::vm.removable"></md-chips>
+						</div>
+						<div flex-xs="100" flex-gt-xs="100">
+							<wan-select placeholder="" source-data="::vm.lookup.basicCateringServices" selected-data="vm.selectedBasicCateringServices" select-changed=""></wan-select>
+						</div>	
+					</div>
+					
+        		</div>
+        	</fieldset>
+        </form>
+    </md-content>    
         <input type="submit" wz-next value="Finish now" />
     </wz-step>
 </wizard>
