--- a/app/lp_wizard/views/venue_wizard/venue_wizard.html
+++ b/app/lp_wizard/views/venue_wizard/venue_wizard.html
@@ -188,7 +188,7 @@
     <wz-step wz-title="Catering & Decor Details">
     <md-content>
         <h1>Catering & Decor Details</h1>
-    	<form name="basicDetails">
+    	<form name="cateringDecorDetails">
         	<fieldset ng-disabled="false">
         		<div layout="row" layout-wrap layout-margin>
         			<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
@@ -265,6 +265,21 @@
         		</div>
         	</fieldset>
         </form>
+        <!-- For Image Uploading -->
+        <div layout="column" layout-wrap>
+        	<h2 class="md-title">Upload Menu Images</h2>
+        	<div layout="row" layout-wrap layout-margin layout-align="start center">
+        	<md-button class="md-accent md-raised" ngf-select="vm.uploadFiles($files)" ngf-multiple="true" ngf-pattern="'image/*'" flex="20" ngf-accept="'image/*'" ngf-max-size="256KB" ngf-max-total-size="1MB" ngf-max-files="4">Upload</md-button>
+  			<div>(Max 4 Image Files, Max size 256KB for each File)</div>
+  			</div>
+  			<!--Drop files: <div ngf-drop ng-model="files" class="drop-box">Drop</div>-->
+  			<div layout="row" layout-fill layout-wrap layout-margin>
+  				<div flex-gt-xs="20" flex-xs="30" class="uploaded-img-container" ng-repeat="image in vm.menuImages">
+  					<img style="width: 100%;" data-ng-src="{{image}}"/>
+  				</div>
+  			</div>
+        </div>
+        
     </md-content>    
         <input type="submit" wz-next value="Finish now" />
     </wz-step>
