--- a/app/views/login/signup.html
+++ b/app/views/login/signup.html
@@ -39,7 +39,7 @@
           </div>
 		
 		<div>	
-          <a href="#" class="btn btn-login">CREATE MY ACCOUNT</a>
+          <a href="#" class="btn btn-login" ng-click="vm.createAccount();">CREATE MY ACCOUNT</a>
 </div>
 		<div class="text-center mTop10">
       	Already have an account ? <a href="javascript:void(0)" class="log-in-link" data-ng-click="vm.closePopup();vm.showSignInPopup();">LOG IN</a>
