--- a/app/views/login/signin.html
+++ b/app/views/login/signin.html
@@ -8,6 +8,11 @@
       <div class="modal-body">
       	
       	<md-content>
+      	<!-- Global Message Bar -->
+      	
+      	<global-messagebar message-type="vm.messageType" message-bar-message="vm.messageBarMessage"></global-messagebar>
+      	
+      	<!-- Global Message Bar Ends -->
     <md-tabs md-dynamic-height md-border-bottom md-stretch-tabs="always">
       <md-tab label="User">
         <md-content class="md-padding">
